--- a/layout_parts/q3/index.html
+++ b/layout_parts/q3/index.html
@@ -39,7 +39,55 @@
         <!-- 回答はクラスq3の要素の中に書いてね -->
         <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
         <div class="q3">
-          
+          <table class="the_table">
+            <tr class="table_row">
+              <th class="the_cell">日付</th>
+              <th class="the_cell">朝ごはん</th>
+              <th class="the_cell">昼ごはん</th>
+              <th class="the_cell">夜ご飯</th>
+              <th class="the_cell">おやつ</th>
+              <th class="the_cell">夜食</th>
+            </tr>
+            <tr class="table_row">
+              <th class="the_cell">2016/04/01</th>
+              <td class="the_cell">食パン</td>
+              <td class="the_cell">チャーハン</td>
+              <td class="the_cell">杏仁豆腐</td>
+              <td class="the_cell">舞茸丼</td>
+              <td class="the_cell">いちご</td>
+            <tr class="table_row">
+              <th class="the_cell">2016/04/02</th>
+              <td class="the_cell">なし</td>
+              <td class="the_cell">ケバブ丼</td>
+              <td class="the_cell">ゼリー</td>
+              <td class="the_cell">唐揚げ定食</td>
+              <td class="the_cell">いちご</td>
+            </tr>
+            <tr class="table_row">
+              <th class="the_cell">2016/04/03</th>
+              <td class="the_cell">納豆ご飯</td>
+              <td class="the_cell">まぐろ定食</td>
+              <td class="the_cell">チョコパン</td>
+              <td class="the_cell">餃子定食</td>
+              <td class="the_cell">チョコ</td>
+            </tr>
+            <tr class="table_row">
+              <th class="the_cell">2016/04/04</th>
+              <td class="the_cell">食パン</td>
+              <td class="the_cell">牛丼</td>
+              <td class="the_cell">アイス</td>
+              <td class="the_cell">豚丼</td>
+              <td class="the_cell">スムージー</td>
+            </tr>
+            <tr class="table_row">
+              <th class="the_cell">合計カロリー</th>
+              <td class="the_cell">10000kcal</td>
+              <td class="the_cell">12000kcal</td>
+              <td class="the_cell">3000kcal</td>
+              <td class="the_cell">30000kcal</td>
+              <td class="the_cell">1000kcal</td>
+            </tr>
+          </table>
         </div>
         <!-- 回答はクラスq3の要素の中に書いてね -->
       </div>
