--- a/layout_parts/q4/index.html
+++ b/layout_parts/q4/index.html
@@ -33,16 +33,28 @@
         <!-- 回答はクラスq4の要素の中に書いてね -->
         <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
         <!-- 新たにタグは追加しなくてもできます。 -->
-        <div class="q4">
-          <div>
-            <div>固定</div>
-            <div>可変</div>
-            <div>固定</div>
+        <div class="q4 offwhite_box">
+          <div class="top_container">
+            <div class="orange_box">
+              <p>固定</p>
+            </div>
+            <div class="pink_box">
+              <p>可変</p>
+            </div>
+            <div class="blue_box">
+              <p>固定</p>
+            </div>
           </div>
-          <div>
-            <div>可変</div>
-            <div>可変</div>
-            <div>固定</div>
+          <div class="bottom_container">
+            <div class="yellow_box">
+              <p>可変</p>
+            </div>
+            <div class="red_box">
+              <p>可変</p>
+            </div>
+            <div class="green_box">
+              <p>固定</p>
+            </div>
           </div>
         </div>
         <!-- 回答はクラスq4の要素の中に書いてね -->
