--- a/layout_parts/q6/index.html
+++ b/layout_parts/q6/index.html
@@ -41,8 +41,8 @@
             <!-- Q6-1の回答はここに書いてね -->
             <!-- 新たにタグは追加しなくてもできます。 -->
             <div class="q6__box">
-              <div>
-                <p>text-align</p>
+              <div class="wrapper_of_text_align">
+                <p class="text_align">text-align</p>
               </div>
             </div>
             <!-- Q6-1の回答はここに書いてね -->
@@ -54,7 +54,7 @@
             <!-- Q6-1の回答はここに書いてね -->
             <!-- 新たにタグは追加しなくてもできます。 -->
             <div class="q6__box">
-              <p>margin</p>
+              <p class="centering_margin">margin</p>
             </div>
             <!-- Q6-1の回答はここに書いてね -->
           </div>
@@ -84,9 +84,9 @@
           <!-- Q6-2の回答はここに書いてね -->
           <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
           <!-- 新たにタグは追加しなくてもできます。 -->
-          <div class="q6 q6--around">
-            <div>
-              <p>table</p>
+          <div class="q6 q6--around container_of_table">
+            <div class="wrapper_of_table">
+              <p class="centering_table">table</p>
             </div>
           </div>
           <!-- Q6-2の回答はここに書いてね -->
@@ -99,8 +99,8 @@
           <!-- Q6-2の回答はここに書いてね -->
           <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
           <!-- 新たにタグは追加しなくてもできます。 -->
-          <div class="q6 q6--around">
-            <p>flex</p>
+          <div class="q6 q6--around container_of_flex">
+            <p class="centering_flex">flex</p>
           </div>
           <!-- Q6-2の回答はここに書いてね -->
           <div class="q6 q6--position">
@@ -114,8 +114,8 @@
             <!-- Q6-2の回答はここに書いてね -->
             <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
             <!-- 新たにタグは追加しなくてもできます。 -->
-            <div class="q6__box is-stable">
-              <p class="q6__box__inner">position固定</p>
+            <div class="q6__box is-stable container_of_stable_position">
+              <p class="q6__box__inner stable_position">position固定</p>
             </div>
             <!-- Q6-2の回答はここに書いてね -->
             <!--
@@ -128,8 +128,8 @@
             <!-- Q6-2の回答はここに書いてね -->
             <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
             <!-- 新たにタグは追加しなくてもできます。 -->
-            <div class="q6__box is-flexible">
-              <p class="q6__box__inner">position可変</p>
+            <div class="q6__box is-flexible container_of_flexible_position">
+              <p class="q6__box__inner flexible_position">position可変</p>
             </div>
             <!-- Q6-2の回答はここに書いてね -->
           </div>
