--- a/layout_parts/q4/index.html
+++ b/layout_parts/q4/index.html
@@ -33,26 +33,26 @@
         <!-- 回答はクラスq4の要素の中に書いてね -->
         <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
         <!-- 新たにタグは追加しなくてもできます。 -->
-        <div class="q4 offwhite_box">
-          <div class="top_container">
-            <div class="orange_box">
+        <div class="q4 offwhite_container">
+          <div class="wrapper_of_3boxes">
+            <div class="orange_box common_style">
               <p>固定</p>
             </div>
-            <div class="pink_box">
+            <div class="pink_box common_style">
               <p>可変</p>
             </div>
-            <div class="blue_box">
+            <div class="blue_box common_style">
               <p>固定</p>
             </div>
           </div>
-          <div class="bottom_container">
-            <div class="yellow_box">
+          <div class="wrapper_of_3boxes">
+            <div class="yellow_box common_style">
               <p>可変</p>
             </div>
-            <div class="red_box">
+            <div class="red_box common_style">
               <p>可変</p>
             </div>
-            <div class="green_box">
+            <div class="green_box common_style">
               <p>固定</p>
             </div>
           </div>
