--- a/layout_parts/q3/index.html
+++ b/layout_parts/q3/index.html
@@ -40,52 +40,52 @@
         <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
         <div class="q3">
           <table class="the_table">
-            <tr class="table_row">
-              <th class="the_cell">日付</th>
-              <th class="the_cell">朝ごはん</th>
-              <th class="the_cell">昼ごはん</th>
-              <th class="the_cell">夜ご飯</th>
-              <th class="the_cell">おやつ</th>
-              <th class="the_cell">夜食</th>
+            <tr>
+              <th>日付</th>
+              <th>朝ごはん</th>
+              <th>昼ごはん</th>
+              <th>夜ご飯</th>
+              <th>おやつ</th>
+              <th>夜食</th>
             </tr>
-            <tr class="table_row">
-              <th class="the_cell">2016/04/01</th>
-              <td class="the_cell">食パン</td>
-              <td class="the_cell">チャーハン</td>
-              <td class="the_cell">杏仁豆腐</td>
-              <td class="the_cell">舞茸丼</td>
-              <td class="the_cell">いちご</td>
-            <tr class="table_row">
-              <th class="the_cell">2016/04/02</th>
-              <td class="the_cell">なし</td>
-              <td class="the_cell">ケバブ丼</td>
-              <td class="the_cell">ゼリー</td>
-              <td class="the_cell">唐揚げ定食</td>
-              <td class="the_cell">いちご</td>
+            <tr>
+              <th>2016/04/01</th>
+              <td>食パン</td>
+              <td>チャーハン</td>
+              <td>杏仁豆腐</td>
+              <td>舞茸丼</td>
+              <td>いちご</td>
+            <tr>
+              <th>2016/04/02</th>
+              <td>なし</td>
+              <td>ケバブ丼</td>
+              <td>ゼリー</td>
+              <td>唐揚げ定食</td>
+              <td>いちご</td>
             </tr>
-            <tr class="table_row">
-              <th class="the_cell">2016/04/03</th>
-              <td class="the_cell">納豆ご飯</td>
-              <td class="the_cell">まぐろ定食</td>
-              <td class="the_cell">チョコパン</td>
-              <td class="the_cell">餃子定食</td>
-              <td class="the_cell">チョコ</td>
+            <tr>
+              <th>2016/04/03</th>
+              <td>納豆ご飯</td>
+              <td>まぐろ定食</td>
+              <td>チョコパン</td>
+              <td>餃子定食</td>
+              <td>チョコ</td>
             </tr>
-            <tr class="table_row">
-              <th class="the_cell">2016/04/04</th>
-              <td class="the_cell">食パン</td>
-              <td class="the_cell">牛丼</td>
-              <td class="the_cell">アイス</td>
-              <td class="the_cell">豚丼</td>
-              <td class="the_cell">スムージー</td>
+            <tr>
+              <th>2016/04/04</th>
+              <td>食パン</td>
+              <td>牛丼</td>
+              <td>アイス</td>
+              <td>豚丼</td>
+              <td>スムージー</td>
             </tr>
-            <tr class="table_row">
-              <th class="the_cell">合計カロリー</th>
-              <td class="the_cell">10000kcal</td>
-              <td class="the_cell">12000kcal</td>
-              <td class="the_cell">3000kcal</td>
-              <td class="the_cell">30000kcal</td>
-              <td class="the_cell">1000kcal</td>
+            <tr>
+              <th>合計カロリー</th>
+              <td>10000kcal</td>
+              <td>12000kcal</td>
+              <td>3000kcal</td>
+              <td>30000kcal</td>
+              <td>1000kcal</td>
             </tr>
           </table>
         </div>
